# text-to-face-dcgan

./: .gitignore  1-text-to-image-dcgan-mnist-28x28.ipynb  3-text-to-image-dcgan-humanfaces-64x64.ipynb  README.md  dcgan.ipynb  pyproject.toml
data/humanfaces/: humanfaces_labels.csv  selected_men.pkl
